# esp-csi-tui-rs

./: .gitignore  Cargo.toml  README.md  example.csv  example_data.mock  task.md  test.csv  zombieeeeeeeeeeeee_1764712722.csv
examples/: test_rerun.rs
logs/: csi_1764702449.rrd  csi_1764704648.rrd
project/: Cargo.toml
project/src/: config_manager.rs  esp_com.rs  input_handler.rs  main.rs
project/src/frontend/: layout_tree.rs  mod.rs  responsive.rs  theme.rs  view_router.rs  view_state.rs
project/src/frontend/overlays/: help.rs  load_template.rs  main_menu.rs  mod.rs  options.rs  overlay_expo.rs  quit.rs  save_template.rs  view_selector.rs
project/src/frontend/views/: spectrogram.rs  stats.rs  view_expo.rs
project/templates/: default.json  gruv.json
src/: app.rs  csi_data.rs  esp_com.rs  input_handler.rs  main.rs  mod_app.rs  mod_csi_data.rs  mod_network.rs
src/backend/: csi_data.rs  csv_parser.rs  dataloader.rs  doppler.rs  esp_utility.rs  mod.rs
src/frontend/: layout_tree.rs  mod.rs  theme.rs  view_router.rs  view_state.rs  view_traits.rs
src/frontend/overlays/: export_data.rs  help.rs  load_template.rs  main_menu.rs  mod.rs  options.rs  replay_selector.rs  theme_selector.rs  view_selector.rs
src/frontend/views/: camera.rs  isometric.rs  mod.rs  phase.rs  polar.rs  raw_scatter.rs  spectrogram.rs  stats.rs  time_domain_iso.rs
src/rerun_stream/: mod.rs
templates/: catpuccin.json  cattheme.json  empty.json  empty_canvas.json  gruv.json  self_driving_cars.json  yaman<3.json  zombib7bk.json
