[package]
edition      = "2024"
name         = "lol"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "lol"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }

# critical-section = "1.2.0"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }

esp-csi-rs = { version = "0.3.0", features = ["esp32c3"] }
static_cell = "2.1.1"
esp-println = { version = "0.15.0", features = ["esp32c3"] }
esp-wifi = { version = "0.15.0", default-features = false, optional = false, features = [
    "wifi",
    "sniffer",
    "esp-alloc",
    "builtin-scheduler",
    "esp32c3",
] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }
embassy-time = { version = "0.5.0" }
embassy-executor = { version = "0.7.0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'off'
opt-level        = 3
overflow-checks  = false
