[package]
name = "project"
version = "0.1.0"
edition = "2024"

[lib]
name = "project"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
serialport = "4.8.1"
rerun = "0.20.2"
# opencv = "0.97.2"
