[package]
name = "project"
version = "0.1.0"
edition = "2024"

[lib]
name = "project"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serialport = "4.8.1"
rerun = { version = "0.27", optional = true, default-features = false, features = ["sdk"] }
# opencv = "0.97.2"

[features]
default = ["rerun"]
rerun = ["dep:rerun"]
